# thcrt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  Caddyfile  Dockerfile  MANIFEST.in  README.md  Taskfile.yml  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  tailwind.config.js  update.sh  web_waitress.service
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  format.yml
posts/: my-first-post.md  reddit-isn't-immune-to-spam.md
src/thcrt/: __init__.py  __main__.py  pages.py
src/thcrt/blog/: __init__.py  posts.py
src/thcrt/blog/posts/: example_post.html.jinja  jellyfin_androidtv_certificate.html.jinja  reddit_spam.html.jinja
src/thcrt/blog/templates/blog/: index.html.jinja  post.html.jinja
src/thcrt/static/: quotes.js  site.webmanifest  style.css
src/thcrt/templates/: _base.html.jinja  colophon.html.jinja  index.html.jinja
src/thcrt/templates/components/: pixelbutton.html.jinja
thcrt/: __init__.py  __main__.py  blog.py  page.py  postmanager.py
thcrt/posts/: reddit-isn't-immune-to-spam.md
thcrt/static/: public.asc
thcrt/templates/: base.html  home.html  list_posts.html  post.html  posts.html
website/: __init__.py  __main__.py  blog.py  page.py  postmanager.py  quotes.py  requirements.txt
website/posts/: my-first-post.md
website/templates/: base.html  home.html  list_posts.html  post.html  posts.html
