[project]
name = "thcrt"
version = "0.0.0"
description = "My personal website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "waitress>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
thcrt = "thcrt:main"