[project]
name = "thcrt"
version = "0.0.0"
description = "My personal website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "humanize>=4.11.0",
    "python-frontmatter>=1.1.0",
    "waitress>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.8",
]

[project.scripts]
thcrt = "thcrt:main"

[tool.pyright]
include = ["src/thcrt"]
strict = ["**/*"]
deprecateTypingAliases = true
reportCallInDefaultInitializer = "information"
reportImplicitOverride = "warning"
reportImplicitStringConcatenation = "warning"
reportPropertyTypeMismatch = "warning"
reportShadowedImports = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedCallResult = "information"

[tool.ruff]
line-length = 100
lint.select = [
  "ERA",   # eradicate
  "ASYNC", # flake8-async
  "S",     # flake8-bandit
  "BLE",   # flake8-blind-except
  "FBT",   # flake8-boolean-trap
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "C4",    # flake8-comprehensions
  "EM",    # flake8-errmsg
  "FA",    # flake8-future-annotations
  "ISC",   # flake8-implicit-str-concat
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  "INP",   # flake8-no-pep420
  "PIE",   # flake8-pie
  "T20",   # flake8-print
  "Q",     # flake8-quotes
  "RSE",   # flake8-raise
  "RET",   # flake8-return
  "SLF",   # flake8-self
  "SIM",   # flake8-simplify
  "SLOT",  # flake8-slots
  "TID",   # flake8-tidy-imports
  "TC",    # flake8-type-checking
  "ARG",   # flake8-unused-arguments
  "PTH",   # flake8-use-pathlib
  "FLY",   # flynt
  "I",     # isort
  "C90",   # mccabe
  "N",     # pep8-naming
  "PERF",  # perflint
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "D",     # pydocstyle
  "F",     # pyflakes
  "PL",    # pylint
  "UP",    # pyupgrade
  "FURB",  # refurb
  "RUF",   # ruff
  "TRY",   # tryceratops
]
lint.ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
lint.per-file-ignores = { "migrations/**/*" = ["INP001"] }
lint.pydocstyle.convention = "google"
fix = true
